<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/newRecipe"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nav_recipe" />

    <item
        android:id="@+id/groceryList"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/nav_grocery" />

</menu>

