<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.recimeal.presentation.RecipesActivity">

        <TextView
            android:id="@+id/textRecipeTitle"
            android:layout_width="261dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/default_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toStartOf="@+id/favoriteSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/favoriteSwitch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="favoriteButton"
            android:text="Favourite"
            app:layout_constraintBottom_toTopOf="@+id/textRecipeDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textRecipeTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textRecipeDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/default_description"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRecipeTitle" />

        <ListView
            android:id="@+id/listIngredients"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRecipeDescription">


        </ListView>

        <ScrollView
            android:id="@+id/recipeScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/deleteButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listIngredients">

                <TextView
                    android:id="@+id/textRecipeInstruct"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/default_instructions"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

        </ScrollView>


        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonRecipeDeleteOnClick"
            android:text="Delete"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintEnd_toStartOf="@+id/addToGroceryButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addToGroceryButton"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:onClick="buttonAddOnClick"
            android:text="Add to Grocery List"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deleteButton" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@color/virdisGray1"
            app:itemBackground="@color/virdisGray1"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_navigation" />


</androidx.constraintlayout.widget.ConstraintLayout>
